<resources>
    <string name="app_name">Kertas Gunting Batu</string>
    <string name="player_one">Pemain 1</string>
    <string name="versus">VS</string>
    <string name="computer">COM</string>
    <string name="refresh">Reset Game</string>
    <string name="player_one_win">Pemain 1\nMENANG!</string>
    <string name="player_two_win">Pemain 2\nMENANG!</string>
    <string name="draw">DRAW\n</string>
    <string name="pick_rock">pick_rock</string>
    <string name="pick_paper">pick_paper</string>
    <string name="pick_scissors">pick_scissors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_title">PILIH LAWANMU</string>
    <string name="vs_player">Ervin VS Pemain</string>
    <string name="vs_cpu">Ervin VS CPU</string>
    <string name="play_again">Main Lagi</string>
    <string name="back_to_menu">Kembali Ke Menu</string>
    <string name="game_result">Hasil Permainan</string>
</resources>