<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close" />

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPlayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/comic"
            android:text="@string/player_one"
            android:textColor="#00b0f0"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnRockPlayerOne"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/pick_rock"
            android:focusable="true"
            android:src="@drawable/ic_batu"
            android:tag="batu" />

        <ImageButton
            android:id="@+id/btnPaperPlayerOne"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/pick_paper"
            android:focusable="true"
            android:src="@drawable/ic_kertas"
            android:tag="kertas" />

        <ImageButton
            android:id="@+id/btnScissorsPlayerOne"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/pick_scissors"
            android:focusable="true"
            android:src="@drawable/ic_gunting"
            android:tag="gunting" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llResult"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@null"
        android:gravity="center"
        android:rotation="-15">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comic"
            android:gravity="center_horizontal"
            android:lines="1"
            android:text="@string/versus"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="80sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/comic"
            android:text="@string/computer"
            android:textColor="#00b0f0"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnRockPlayerTwo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:contentDescription="@string/pick_rock"
            android:padding="10dp"
            android:src="@drawable/ic_batu"
            android:tag="batu" />

        <ImageButton
            android:id="@+id/btnPaperPlayerTwo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:contentDescription="@string/pick_paper"
            android:padding="10dp"
            android:src="@drawable/ic_kertas"
            android:tag="kertas" />

        <ImageButton
            android:id="@+id/btnScissorsPlayerTwo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:contentDescription="@string/pick_scissors"
            android:padding="10dp"
            android:src="@drawable/ic_gunting"
            android:tag="gunting" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnRefresh"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@null"
        android:contentDescription="@string/refresh"
        android:src="@drawable/ic_refresh" />

</RelativeLayout>